--- a/package.json
+++ b/package.json
@@ -10,6 +10,8 @@
     "@types/node": "^16.18.97",
     "@types/react": "^18.3.2",
     "@types/react-dom": "^18.3.0",
+    "google-protobuf": "^3.21.2",
+    "grpc-web": "^1.5.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-scripts": "5.0.1",
